Add mod metadata and restructure project files
- Introduced `About.xml` for mod metadata including name, author, and description.
- Added `CompFavorite` and `Patch_ThingWithComps_GetGizmos` classes.
- Renamed `Class1` to `Main` with internal access modifier.
- Updated `RimFavorites.csproj` to adjust output paths and include new classes.
- Added `LocalIntoGame` build configuration in `RimFavorites.sln`.

--- a/RimFavorites.csproj
+++ b/RimFavorites.csproj
@@ -30,6 +30,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'LocalIntoGame|AnyCPU'">
+    <OutputPath>..\..\SteamLibrary\steamapps\common\RimWorld\Mods\RimFavorites\Assemblies\</OutputPath>
+    <DefineConstants>DEBUG</DefineConstants>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony, Version=2.4.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\Lib.Harmony.2.4.1\lib\net48\0Harmony.dll</HintPath>
@@ -53,11 +57,22 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="CompFavorite.cs" />
+    <Compile Include="Main.cs" />
+    <Compile Include="Patch_ThingWithComps_GetGizmos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="About\About.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Defs\" />
+    <Folder Include="Textures\UI\Icons\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
